RESOLVED FIXED57189
Dock doesn't come back after leaving fullscreen on Hulu
https://bugs.webkit.org/show_bug.cgi?id=57189
Summary Dock doesn't come back after leaving fullscreen on Hulu
Anders Carlsson
Reported 2011-03-27 12:32:18 PDT
Dock doesn't come back after leaving fullscreen on Hulu
Attachments
Patch (3.20 KB, patch)
2011-03-27 12:53 PDT, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-03-27 12:53:42 PDT
Anders Carlsson
Comment 2 2011-03-27 12:56:09 PDT
Alexey Proskuryakov
Comment 3 2011-03-28 10:36:04 PDT
*** Bug 57188 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.