2011-03-27  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Dock doesn't come back after leaving fullscreen on Hulu
        https://bugs.webkit.org/show_bug.cgi?id=57189
        <rdar://problem/9192413>

        Port some code over from the old WebKit1 plug-in host.

        * PluginProcess/mac/PluginProcessShim.mm:
        (WebKit::shimShowMenuBar):
        (WebKit::shimHideMenuBar):
        (WebKit::shimIsMenuBarVisible):


Canonical link: https://commits.webkit.org/71883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82078 268f45cc-cd09-0410-ab3c-d52691b4dbfc