Source/WebKit2/PluginProcess/mac/PluginProcessShim.mm
@@ -121,6 +121,32 @@ static void shimHideWindow(WindowRef window)
     HideWindow(window);
 }
 
+static bool isMenuBarVisible = true;
+
+static void shimShowMenuBar(void)
+{
+    isMenuBarVisible = true;
+
+    ShowMenuBar();
+}
+
+static void shimHideMenuBar(void)
+{
+    isMenuBarVisible = false;
+
+    // Make sure to make ourselves the front process
+    ProcessSerialNumber psn;
+    GetCurrentProcess(&psn);
+    SetFrontProcess(&psn);
+    
+    HideMenuBar();
+}
+
+static Boolean shimIsMenuBarVisible(void)
+{
+    return isMenuBarVisible;
+}
+
 DYLD_INTERPOSE(shimDebugger, Debugger);
 DYLD_INTERPOSE(shimGetCurrentEventButtonState, GetCurrentEventButtonState);
 DYLD_INTERPOSE(shimIsWindowActive, IsWindowActive);
@@ -128,6 +154,9 @@ DYLD_INTERPOSE(shimModalDialog, ModalDialog);
 DYLD_INTERPOSE(shimAlert, Alert);
 DYLD_INTERPOSE(shimShowWindow, ShowWindow);
 DYLD_INTERPOSE(shimHideWindow, HideWindow);
+DYLD_INTERPOSE(shimShowMenuBar, ShowMenuBar)
+DYLD_INTERPOSE(shimHideMenuBar, HideMenuBar)
+DYLD_INTERPOSE(shimIsMenuBarVisible, IsMenuBarVisible);
 
 #endif
 
